style.css
body {
  font-family: sans-serif;
  text-align: center;
  background-color: #121213;
  color: #ffffff;
}

h1 {
  margin-top: 20px;
}

#grid {
  display: grid;
  grid-template-rows: repeat(6, 60px);
  grid-gap: 5px;
  margin: 20px auto;
  width: 350px;
}

.row {
  display: grid;
  grid-template-columns: repeat(5, 60px);
  gap: 5px;
}

.cell {
  border: 2px solid #3a3a3c;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  text-transform: uppercase;
  font-weight: bold;
}

.correct {
  background-color: #6aaa64;
  color: #fff;
  border: none;
}

.present {
  background-color: #c9b458;
  color: #fff;
  border: none;
}

.absent {
  background-color: #9f9f9f;
  color: #fff;
  border: none;
}

#keyboard {
  margin-top: 20px;
}

.key {
  display: inline-block;
  margin: 3px;
  padding: 10px 15px;
  border-radius: 5px;
  background-color: #818384;
  cursor: pointer;
  user-select: none;
  font-weight: bold;
  text-transform: uppercase;
}

.key.correct {
  background-color: #6aaa64;
  color: white;
}

.key.present {
  background-color: #c9b458;
  color: white;
}

.key.absent {
  background-color: #787c7e;
  color: white;
}

#message {
  font-size: 1.5rem;
  margin: 10px 0;
  color: #fff;
}

#restartBtn {
  padding: 10px 20px;
  font-size: 1rem;
  margin-bottom: 20px;
  cursor: pointer;
  background-color: #6aaa64;
  color: #fff;
  border: none;
  border-radius: 5px;
}

@media (max-width: 600px) {
  #grid {
    grid-template-rows: repeat(6, 30px);
    width: 180px;
    gap: 4px;
  }

  .row {
    grid-template-columns: repeat(5, 30px);
    gap: 4px;
  }

  .key {
    margin: 3px;
    padding: 2px 6px;
  }
}

